Update tox config and add bashate E006, E040 exceptions
This patch updates the tox.ini the same bashate exceptions as are
currently in the OpenStack-Ansible playbook repo.

It also ensures that the linters and all lint targets work
appropriately and normalises the tox.ini configuration to use
uniform formatting.

The use of ansible.cfg is removed as there is no way of being
certain which paths can be used without reverting to an ugly
sed hack in the commands. This is why it is preferred to make
use of environment variables which make use of tox's default
substitutions instead. It's a more reliable way of achieving
the goal for the purpose of gating and testing.

The switch to using a git clone instead of ansible-galaxy to
download the plugins is due to the path spec not being able to
work in Ansible 2.x. [1]

[1] https://github.com/ansible/ansible/issues/13563

Change-Id: I74bb29aea2794f770c1c69a64e155da2cf91c2d0

--- a/tests/test.yml
+++ b/tests/test.yml
@@ -21,19 +21,14 @@
       pip_links:
         - name: test-links
           link: https://openstack-hostname.something/python_packages/master
-      # The $HOME directory is mocked to work with tox
-      #  by defining the 'ansible_env' hash. This should
-      #  NEVER be done outside of testing.
-      ansible_env:  ## NEVER DO THIS OUTSIDE OF TESTING
-        HOME: "/tmp"
   post_tasks:
     - name: Open pip lockdown test-links file
       slurp:
-        src: "/tmp/.pip/links.d/test-links.link"
+        src: "{{ ansible_env.HOME}}/.pip/links.d/test-links.link"
       register: test_link
     - name: Open pip conf file
       slurp:
-        src: "/tmp/.pip/pip.conf"
+        src: "{{ ansible_env.HOME}}/.pip/pip.conf"
       register: pip_conf
     - name: Check files contents
       assert:
